layout_words_creation.xml

--- a/app/src/main/res/res-global/res-layout/layout/tabs.xml
+++ b/app/src/main/res/res-global/res-layout/layout/tabs.xml
@@ -11,7 +11,7 @@
         android:id="@+id/btn_words"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/tab_shape"
+        android:background="@drawable/tab_state"
         android:text="@string/words"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/btn_phrases"
@@ -22,7 +22,7 @@
         android:id="@+id/btn_phrases"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/tab_shape"
+        android:background="@drawable/tab_state"
         android:text="@string/phrases"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
