--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_words_creation.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_words_creation.xml
@@ -25,11 +25,10 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.25" />
 
-
         <EditText
             android:id="@+id/edit_word"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/edit_margin"
             android:digits="@string/format_english"
             android:gravity="center"
@@ -39,22 +38,22 @@
             android:nextFocusForward="@id/edit_translation"
             android:singleLine="true"
             android:textSize="25sp"
-            app:layout_constraintBottom_toTopOf="@id/guideH_35"
+            app:layout_constraintBottom_toTopOf="@id/guideH_40"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guideH_25" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideH_35"
+            android:id="@+id/guideH_40"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.35" />
+            app:layout_constraintGuide_percent="0.4" />
 
         <EditText
             android:id="@+id/edit_translation"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/edit_margin"
             android:gravity="center"
             android:hint="@string/enter_translation"
@@ -62,17 +61,42 @@
             android:inputType="textCapSentences"
             android:singleLine="true"
             android:textSize="25sp"
-            app:layout_constraintBottom_toTopOf="@id/guideH_45"
+            app:layout_constraintBottom_toTopOf="@id/guideH_55"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/guideH_35" />
+            app:layout_constraintTop_toBottomOf="@id/guideH_40" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideH_45"
+            android:id="@+id/guideH_55"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.45" />
+            app:layout_constraintGuide_percent="0.55" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideV_40"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.4" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideV_60"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.6" />
+
+        <ImageView
+            android:id="@+id/ib_help_add"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:src="@drawable/ic_help_add"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toStartOf="@id/guideV_60"
+            app:layout_constraintStart_toEndOf="@id/guideV_40"
+            app:layout_constraintTop_toBottomOf="@id/guideH_55" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
