--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_prompt.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_prompt.xml
@@ -3,17 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        clickHideKeyboard="@{true}"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <EditText
             android:id="@+id/edit_prompt"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/prompt_edit_margin"
             android:hint="@string/enter_prompt"
+            android:inputType="textCapSentences|textMultiLine"
             android:textSize="@dimen/edit_text_size"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
