--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_words_creation.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_words_creation.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.motion.widget.MotionLayout
         android:id="@+id/motion"
+        clickHideKeyboard="@{true}"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:nextFocusForward="@id/edit_word"
