--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_words_creation.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_words_creation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.motion.widget.MotionLayout
-        android:id="@+id/motion"
+        android:id="@+id/layout_words_creation"
         clickHideKeyboard="@{true}"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
