Created ItemWord for RecyclerView

--- a/app/src/main/res/screens/dictionary/layout/fragment_dictionary.xml
+++ b/app/src/main/res/screens/dictionary/layout/fragment_dictionary.xml
@@ -78,6 +78,7 @@
             android:gravity="bottom|start"
             android:text="@string/dictionary_no"
             android:textStyle="bold"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/words"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -91,6 +92,7 @@
             android:gravity="top|end"
             android:text="@string/dictionary_words"
             android:textStyle="bold"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guideH_80"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
