--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_prompt.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_prompt.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         clickHideKeyboard="@{true}"
@@ -15,6 +16,7 @@
             android:inputType="textCapSentences|textMultiLine"
             android:textSize="@dimen/edit_text_size"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
