--- a/app/src/main/res/screens/dictionary/layout/item_word.xml
+++ b/app/src/main/res/screens/dictionary/layout/item_word.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/d"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    app:layout_constraintBottom_toBottomOf="@id/barrier">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <Button
-        android:id="@+id/b1"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:text="1"
-        android:background="@color/colorPrimary"/>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_item_word"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:cardCornerRadius="50dp"
+        tools:layout_height="50dp"
+        android:layout_margin="10dp"
+        tools:layout_width="match_parent">
 
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="bottom"
-        app:constraint_referenced_ids="b1" />
+        <TextView
+            android:id="@+id/tv_item_word"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorAccent"
+            android:gravity="center"
+            android:textSize="26sp"
+            android:textStyle="bold|italic"
+            android:singleLine="true"
+            tools:text="Word" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+</layout>
