--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,28 +3,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/startFragment">
+    app:startDestination="@id/authenticationFragment">
 
     <fragment
         android:id="@+id/startFragment"
         android:name="com.veldan.askword_us.start.StartFragment"
         android:label="StartFragment"
-        tools:layout="@layout/fragment_start" >
+        tools:layout="@layout/fragment_start">
         <action
             android:id="@+id/action_startFragment_to_dictionaryFragment"
             app:destination="@id/dictionaryFragment" />
-        <action
-            android:id="@+id/action_startFragment_to_registrationFragment"
-            app:destination="@id/registrationFragment" />
     </fragment>
     <fragment
         android:id="@+id/dictionaryFragment"
         android:name="com.veldan.askword_us.dictionary.DictionaryFragment"
         android:label="DictionaryFragment"
-        tools:layout="@layout/fragment_dictionary"/>
+        tools:layout="@layout/fragment_dictionary" />
+    <fragment
+        android:id="@+id/authenticationFragment"
+        android:name="com.veldan.askword_us.authentication.AuthenticationFragment"
+        android:label="AuthenticationFragment"
+        tools:layout="@layout/fragment_authentication" >
+        <action
+            android:id="@+id/action_authenticationFragment_to_registrationFragment"
+            app:destination="@id/registrationFragment" />
+    </fragment>
     <fragment
         android:id="@+id/registrationFragment"
-        android:name="com.veldan.askword_us.authentication.AuthenticationFragment"
+        android:name="com.veldan.askword_us.authentication.RegistrationFragment"
         android:label="RegistrationFragment"
-        tools:layout="@layout/fragment_authentication"/>
+        tools:layout="@layout/fragment_registration" >
+        <action
+            android:id="@+id/action_registrationFragment_to_startFragment"
+            app:destination="@id/startFragment" />
+    </fragment>
 </navigation>
