--- a/app/src/main/res/screens/authentication/layout/fragment_authentication.xml
+++ b/app/src/main/res/screens/authentication/layout/fragment_authentication.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -19,6 +18,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginHorizontal="@dimen/authentication_margin_horizontal"
+            android:onClick="@{() -> authenticationFragment.transitionToStart()}"
             android:text="@string/authentication_sign_in_without_password"
             android:textSize="@dimen/button_text_size"
             app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
