--- a/app/src/main/res/screens/authentication/layout/fragment_authentication.xml
+++ b/app/src/main/res/screens/authentication/layout/fragment_authentication.xml
@@ -9,16 +9,17 @@
             type="com.veldan.askword_us.authentication.AuthenticationFragment" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/layout_authentication"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layoutDescription="@xml/authentication_scene">
 
         <Button
-            android:id="@+id/btn_sign_in_without_password"
+            android:id="@+id/btn_sign_in_without_registration"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginHorizontal="@dimen/authentication_margin_horizontal"
-            android:onClick="@{() -> authenticationFragment.transitionToStart()}"
             android:text="@string/authentication_sign_in_without_password"
             android:textSize="@dimen/button_text_size"
             app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
@@ -41,7 +42,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_without_password"
+            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_without_registration"
             app:layout_constraintVertical_bias="0.05" />
 
         <Button
@@ -59,6 +60,10 @@
             app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
             app:layout_constraintVertical_bias="0.05" />
 
+        <include
+            android:id="@+id/layout_warning"
+            layout="@layout/layout_warning" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
