--- a/app/src/main/res/screens/authentication/layout/fragment_sign_in.xml
+++ b/app/src/main/res/screens/authentication/layout/fragment_sign_in.xml
@@ -48,6 +48,7 @@
             android:id="@+id/tv_forget_password"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
+            android:onClick="@{() -> signInFragment.forgetPassword()}"
             android:text="@string/sign_in_forget_password"
             android:textColor="@color/colorAccent"
             android:textSize="15sp"
