--- a/app/src/main/res/screens/authentication/layout/fragment_sign_in.xml
+++ b/app/src/main/res/screens/authentication/layout/fragment_sign_in.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="signInFragment"
-            type="com.veldan.askword_us.authentication.SignInFragment" />
+            type="com.veldan.askword_us.authentication.sign_in.SignInFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
