--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_words_creation.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_words_creation.xml
@@ -35,9 +35,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/words_creation_edit_margin"
-            android:digits="@string/format_english"
+            android:digits="@string/word_creation_edit_format_english"
             android:gravity="center"
-            android:hint="@string/enter_word"
+            android:hint="@string/word_creation_edit_enter_word"
             android:imeOptions="actionNext|flagForceAscii"
             android:inputType="textCapSentences"
             android:nextFocusForward="@id/edit_translation"
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/words_creation_edit_margin"
             android:gravity="center"
-            android:hint="@string/enter_translation"
+            android:hint="@string/word_creation_edit_enter_translation"
             android:imeOptions="actionDone"
             android:inputType="textCapSentences"
             android:singleLine="true"
