--- a/app/src/main/res/screens/dictionary/layout/fragment_dictionary.xml
+++ b/app/src/main/res/screens/dictionary/layout/fragment_dictionary.xml
@@ -76,7 +76,7 @@
             android:layout_height="0dp"
             android:autoSizeTextType="uniform"
             android:gravity="bottom|start"
-            android:text="@string/dictionary_no"
+            android:text="@string/dictionary_tv_no"
             android:textStyle="bold"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/words"
@@ -90,7 +90,7 @@
             android:layout_height="0dp"
             android:autoSizeTextType="uniform"
             android:gravity="top|end"
-            android:text="@string/dictionary_words"
+            android:text="@string/dictionary_tv_words"
             android:textStyle="bold"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guideH_80"
@@ -121,7 +121,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/fab_state"
-            android:padding="@dimen/fab_padding"
+            android:padding="@dimen/dictionary_fab_padding"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_category_add"
             android:visibility="invisible" />
@@ -131,7 +131,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/fab_state"
-            android:padding="@dimen/fab_padding"
+            android:padding="@dimen/dictionary_fab_padding"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_photo_add"
             android:visibility="invisible" />
@@ -141,7 +141,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/fab_state"
-            android:padding="@dimen/fab_padding"
+            android:padding="@dimen/dictionary_fab_padding"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_file_add"
             android:visibility="invisible" />
