--- a/app/src/main/res/screens/authentication/layout/fragment_registration.xml
+++ b/app/src/main/res/screens/authentication/layout/fragment_registration.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="registrationFragment"
             type="com.veldan.askword_us.authentication.registration.RegistrationFragment" />
+
+        <variable
+            name="registrationViewModel"
+            type="com.veldan.askword_us.authentication.registration.RegistrationViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -107,8 +110,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/registration_tv_verify_email"
-            android:textSize="20sp"
             android:textColor="#FF0000"
+            android:textSize="20sp"
+            android:visibility="@{registrationViewModel.visibilityTextViewVerifyEmail}"
             app:layout_constraintBottom_toTopOf="@+id/ib_done"
             app:layout_constraintEnd_toEndOf="@id/edit_password"
             app:layout_constraintStart_toStartOf="@+id/edit_password"
