--- a/app/src/main/res/screens/start/layout/fragment_start.xml
+++ b/app/src/main/res/screens/start/layout/fragment_start.xml
@@ -14,6 +14,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/image_account"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="@dimen/start_image_margin"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_account_box"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.1" />
+
         <Button
             android:id="@+id/dictionary"
             android:layout_width="0dp"
